[project]
name = "kaboattest"
version = "0.1.0"
description = ""
authors = [
    {name = "sonsw",email = "sewon1407@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "setuptools (>=80.9.0,<81.0.0)",
    "matplotlib (==3.5)",
    "numpy (==1.26.*)",
    "scikit-fmm (>=2025.6.23,<2026.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "simpleicp (>=2.0.15,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "open3d (>=0.19.0,<0.20.0)",
    "numba (>=0.61.2,<0.62.0)",
    "opencv-python (<4.10)",
    "pyubx2 (>=1.2.55,<2.0.0)",
    "pyserial (>=3.5,<4.0)",
    "pygnssutils (>=1.1.16,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
